# ChangeLog for app-antivirus/clamav
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-antivirus/clamav/ChangeLog,v 1.256 2007/11/14 19:25:05 ticho Exp $

  14 Nov 2007; Andrej Kacian <ticho@gentoo.org> -clamav-0.91.ebuild,
  -clamav-0.91.1.ebuild, clamav-0.91.2.ebuild, clamav-0.92_rc2.ebuild:
  Version cleanup. Get rid of logrotate USE flag - bug #198901.

*clamav-0.92_rc2 (10 Oct 2007)

  10 Oct 2007; Thomas Raschbacher <lordvan@gentoo.org>
  +clamav-0.92_rc2.ebuild:
  added 0.92rc2

  29 Aug 2007; Markus Rothe <corsair@gentoo.org> clamav-0.91.2.ebuild:
  Stable on ppc64; bug #189912

  24 Aug 2007; Raúl Porcel <armin76@gentoo.org> clamav-0.91.2.ebuild:
  alpha/ia64 stable wrt security #189912

  23 Aug 2007; Jeroen Roovers <jer@gentoo.org> clamav-0.91.2.ebuild:
  Stable for HPPA (bug #189912).

  23 Aug 2007; Jurek Bartuszek <jurek@gentoo.org> clamav-0.91.2.ebuild:
  x86 stable (bug #189912)

  23 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  clamav-0.91.2.ebuild:
  ppc stable, bug #189912

  23 Aug 2007; Christoph Mende <angelos@gentoo.org> clamav-0.91.2.ebuild:
  Stable on amd64 wrt security bug #189912

  23 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org> clamav-0.91.2.ebuild:
  Stable on sparc wrt security #189912

*clamav-0.91.2 (21 Aug 2007)

  21 Aug 2007; Andrej Kacian <ticho@gentoo.org> -clamav-0.88.7.ebuild,
  -clamav-0.88.7-r1.ebuild, -clamav-0.88.7-r2.ebuild, -clamav-0.90.ebuild,
  -clamav-0.90.1.ebuild, -clamav-0.90.1-r1.ebuild, -clamav-0.90.2.ebuild,
  -clamav-0.90.3.ebuild, +clamav-0.91.2.ebuild:
  Version bump. Removed obsolete ebuilds.

  17 Jul 2007; Jeroen Roovers <jer@gentoo.org> clamav-0.91.ebuild:
  Stable for HPPA (bug #185013).

*clamav-0.91.1 (17 Jul 2007)

  17 Jul 2007; Andrej Kacian <ticho@gentoo.org> +clamav-0.91.1.ebuild:
  Version bump.

  16 Jul 2007; Markus Rothe <corsair@gentoo.org> clamav-0.91.ebuild:
  Stable on ppc64; bug #185013
