@@ -5,8 +5,10 @@ AUX clamav.logrotate 355 RMD160 f59cd8ce96da8210aa858ee59ee3b6940e3253a6 SHA1 5f
 AUX clamd.conf 193 RMD160 abebb5e1607e6819859b51e1a41b583c8266c6df SHA1 5b27737aecf3bd90277988fc60526ede7d4be636 SHA256 cd867dc66af694282584fa2cfd40a662ac2a7c25d6f2288b9afdc657a07226e3
 AUX clamd.rc 3565 RMD160 704da4f51a69f01524ca68ebe379736c9b0597ce SHA1 d087a49aa492e46e059ddde8b70dc7df8e19d020 SHA256 50ca2c25f796bb3554b5aa08f9e1bbe043ced62f58f2295f6cf33403d7c23dd8
 DIST clamav-0.91.2.tar.gz 13394538 RMD160 9e181a7a4fd08377ff47663aed27f8cc97249a21 SHA1 f18007c3045a1d78967adad805c6934d46ca6419 SHA256 dac9de86dff5ef4c9a6e4962da24988e1aa74948a21b7fb7b7fed17867ddf2a0
+DIST clamav-0.92.tar.gz 14300798 RMD160 37f0450b9b3c6fc863f94811ae372ece1677d791 SHA1 b6573acd9a7bb6bf3bd4b39a0102ce0be764c5bc SHA256 d3c8c1e2e0025a354663b330d69c8848c7a5c9d7248204c69362c2924366025e
 DIST clamav-0.92rc2.tar.gz 13785280 RMD160 312dd39a1afd73b6f1808fa407a6f882a7059034 SHA1 e22a6ace3b04ec668387253804dd6de97877a677 SHA256 503073f54007757ad37e509b061f902ef2244be02ebacd6671d518abbf443f09
 EBUILD clamav-0.91.2.ebuild 4392 RMD160 12a8c4c9585ff724f2064d62456ce32454e845a6 SHA1 a00f703435c4395b559443114ac70ea030c4d2c0 SHA256 a12e47dd2ea8cd212b980673eb1502930c61e0d150afb26efa66e7c3fd3b6fe2
+EBUILD clamav-0.92.ebuild 4388 RMD160 bab0b52029041005b35323869375e2a4f84f455a SHA1 db69474cf137da8dcd18b38f163a560b8b148710 SHA256 7ab38c60904479655cafebd8f7bb39ed5b50cbabbd0e092e41e9afb586f75f42
 EBUILD clamav-0.92_rc2.ebuild 4455 RMD160 f082f9487b00d22f821b5fafb145fb75282e96cc SHA1 37ef600e2fb0ffcb3eae6eeafd5f3fbfcfa07e0d SHA256 1a6ce20e28ce6c97ddc4363897d64d94d23f10e44742ad9e9ae49c308017faf1
-MISC ChangeLog 39410 RMD160 175695bfc5b2c6d107b1e916e996dea9acc8cd4a SHA1 a8ddfcf05004db9ed577fd02543e8c0038c1abc3 SHA256 ad2b398b6fe3a2b57c4d45465e79a49aec1e4558cca428f9531e51b0a006bd3f
+MISC ChangeLog 39524 RMD160 dd6ea8b5b70bc081a66522b553407ded59a3247a SHA1 7989487b103e8cc99d0074a78feac7892c518183 SHA256 7c54930b4a34eb1449890840844a759cb9072787e99cd2c1a18eb2c9d2828ddd
 MISC metadata.xml 184 RMD160 c37bff1fc1cd7139c91dae9b0fa5082e1d81f153 SHA1 cc0a188d9ad2411e78747326c62dd046bd5413c8 SHA256 d51011aa837db802ef539a1321a4af0a4a00879d475b92fd58f3c01df7320b58
