@@ -1,6 +1,11 @@
 # ChangeLog for app-antivirus/clamav
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-antivirus/clamav/ChangeLog,v 1.256 2007/11/14 19:25:05 ticho Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-antivirus/clamav/ChangeLog,v 1.257 2007/12/17 18:38:43 ticho Exp $
+
+*clamav-0.92 (17 Dec 2007)
+
+  17 Dec 2007; Andrej Kacian <ticho@gentoo.org> +clamav-0.92.ebuild:
+  Version bump.
 
   14 Nov 2007; Andrej Kacian <ticho@gentoo.org> -clamav-0.91.ebuild,
   -clamav-0.91.1.ebuild, clamav-0.91.2.ebuild, clamav-0.92_rc2.ebuild:
